remove py on row

--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
     <main>
       <!--===================================================================main container start  ====================================================================-->
       <div class="container mt-5 pt-5">
-        <div class="row gx-3 g-4">
+        <div class="row">
           <!--=======================================================leftside container start  ====================================================================-->
 
           <div
